# ReadyBot-Templates

./: .gitignore  README.md
cpp/: CMakeLists.txt  bot.cpp  register-slash-cmds.cpp  source.cpp
csharp/: Bot.cs
elixir/: .gitignore  mix.exs
elixir/config/: config.exs
elixir/lib/: commands.ex  exs_discord_bot.ex
elixir/lib/exs_discord_bot/: application.ex
elixir/test/: exs_discord_bot_test.exs
java/: Bot.java
js/: index.js  package-lock.json  package.json
python/: app.py
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: config.json
ts/src/client/: index.ts
ts/src/commands/guild/: ping.ts
ts/src/events/: message.ts  ready.ts
ts/src/interfaces/: Command.ts  Config.ts  Event.ts  index.ts
